force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/GenesysFlowId__c.field-meta.xml
<CustomField>
    <fullName>GenesysFlowId__c</fullName>
    <description>Opcional. Identificador del flow de Genesys al que se debe enrutar la cola</description>
    <label>Genesys Flow ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>