force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>