force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/IsSurveyable__c.field-meta.xml
<CustomField>
    <fullName>IsSurveyable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que determina si la cola es elegible para encuesta o no</description>
    <inlineHelpText>Campo que determina si la cola es elegible para encuesta o no</inlineHelpText>
    <label>Is Surveyable?</label>
    <type>Checkbox</type>
</CustomField>