force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/RecordTypeInfo__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeInfo__c</fullName>
    <label>RecordTypeInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>