force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/RouteType__c.field-meta.xml
<CustomField>
    <fullName>RouteType__c</fullName>
    <description>Identifica el tipo de enrutamiento disponible con GenesysCloud, esto permite que una cola pueda gestionar múltiples tipos de comunidados, por ejmplo emails y notas info.</description>
    <inlineHelpText>Los comunicados que se pueden gestionar a través de esta cola.</inlineHelpText>
    <label>Route Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nota Info</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>CanalUnico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>