force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/SalesforceQueueName__c.field-meta.xml
<CustomField>
    <fullName>SalesforceQueueName__c</fullName>
    <description>Mantener a mano con el nombre de la cola de SF a la que se quiere corresponder</description>
    <label>Salesforce Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>