force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/SalesforceRecipientEmail__c.field-meta.xml
<CustomField>
    <fullName>SalesforceRecipientEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Contiene la dirección de email asociada a esa cola</description>
    <label>Salesforce Recipient Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>