force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Ámbito asociado a la cola. Permite definir comportamientos diferentes en base al ámbito al que esté asociado la cola</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scope</valueSetName>
    </valueSet>
</CustomField>