force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/SendConfirmationEmail__c.field-meta.xml
<CustomField>
    <fullName>SendConfirmationEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCS. Marcar si se desea enviar a los remitentes un mensaje de acuse de recibo (solo colas de email)</description>
    <inlineHelpText>Marcar si se desea enviar a los remitentes un mensaje de acuse de recibo (solo colas de email)</inlineHelpText>
    <label>Send confirmation email</label>
    <type>Checkbox</type>
</CustomField>