force-app/zurich-base/main/default/objects/purecloud__PureCloud_Queue__c/fields/SourceArea__c.field-meta.xml
<CustomField>
    <fullName>SourceArea__c</fullName>
    <label>Source Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generic end customer</fullName>
            </value>
            <value>
                <fullName>End customer partner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Partner dome</fullName>
            </value>
            <value>
                <fullName>Mediator</fullName>
            </value>
            <value>
                <fullName>Zurich Business Client</fullName>
            </value>
            <value>
                <fullName>Generic Internal</fullName>
            </value>
            <value>
                <fullName>SDC (Customer Defense Service)</fullName>
            </value>
            <value>
                <fullName>INFO note</fullName>
                <label>Other third parties</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>